--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
      */
     compile 'in.srain.cube:ultra-ptr:1.0.11'
 
+    /**
+     * OkHttp
+     */
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
 }
