--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/FullScreen">
-        <activity android:name=".activity.LoginRegisterActivity">
+        <activity android:name=".activity.LoginRegisterActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,10 +28,16 @@
         <activity
             android:name=".activity.MainPageActivity"
             android:screenOrientation="portrait" />
-        <!--忘记密码页面-->
-        <activity android:name=".activity.ForgetPasswordActivity"
-            android:screenOrientation="portrait"
-            />
+        <!-- 忘记密码页面 -->
+        <activity
+            android:name=".activity.ForgetPasswordActivity"
+            android:screenOrientation="portrait" />
+        <!--密保找回页面-->
+        <activity android:name=".activity.CallBackBySecurityQuestionActivity"
+            android:screenOrientation="portrait"/>
+        <!--电话号码找回页面-->
+        <activity android:name=".activity.CallBackByPhoneNumActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
