add guide page and complet test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,38 +20,39 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     /**
-     * 事件分发
-     */
-
-    /**
-     * View注入框架
+     *  事件分发
      */
     /**
-     * dialog的框架
+     *  View注入框架
      */
     /**
-     * 刷新的控件（上拉刷新，下拉加载 ）
+     *  dialog的框架
      */
     /**
-     * OkHttp
+     *  刷新的控件（上拉刷新，下拉加载 ）
      */
     /**
-     * fastJson
+     *  OkHttp
      */
     /**
-     * Logger
+     *  fastJson
      */
     /**
-     *    对话框
+     *  Logger
      */
     /**
-     * 进度对话框
+     *     对话框
+     */
+    /**
+     *  进度对话框
+     */
+    /**
+     *  运行时权限
      */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -67,4 +68,7 @@ dependencies {
     compile 'cc.cloudist.acplibrary:library:1.2.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
+    provided 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
+    compile files('libs/TalkingData_Analytics_Android_SDK_V2.2.37.jar')
 }
