--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,6 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"  />
     <!--获取当前应用是否在显示应用，可以更精准的统计用户活跃-->
     <uses-permission android:name="android.permission.GET_TASKS"  />
-    <!-- 允许读取网络状态 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 允许读取wifi网络状态 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:name=".CCFApplication"
@@ -52,12 +48,7 @@
         <!-- 登录注册展示界面 -->
         <activity
             android:name=".activity.LoginRegisterActivity"
-            android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="cn.cnlinfo.ccf.activity.MainPageActivity"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
+            android:screenOrientation="portrait" />
         <!-- 忘记密码页面 -->
         <activity
             android:name=".activity.ForgetPasswordActivity"
