complet mainpage indicator

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,12 @@ dependencies {
     /**
      *  运行时权限
      */
+    /**
+     * TalkingData数据统计
+     */
+    /**
+     * viewpageindicatord的使用
+     */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -184,4 +190,5 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
     provided 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
     compile files('libs/TalkingData_Analytics_Android_SDK_V2.2.37.jar')
+    compile 'com.shizhefei:ViewPagerIndicator:1.1.3'
 }
