--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"  />
     <!--获取当前应用是否在显示应用，可以更精准的统计用户活跃-->
     <uses-permission android:name="android.permission.GET_TASKS"  />
-
-    <application
+    <!--获取振动通知-->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+<application
         android:name=".CCFApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ccf"
@@ -44,7 +45,8 @@
         <!-- 用户注册见面 -->
         <activity
             android:name=".activity.RegisterActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <!-- 登录注册展示界面 -->
         <activity
             android:name=".activity.LoginRegisterActivity"
