--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,9 @@ dependencies {
     /**
      * okhttpfinal
      */
+    /**
+     * ViewPagerIndicator
+     */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -188,5 +191,5 @@ dependencies {
     provided 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
     compile files('libs/TalkingData_Analytics_Android_SDK_V2.2.37.jar')
     compile 'cn.finalteam:okhttpfinal:2.0.7'
-
+    compile 'com.shizhefei:ViewPagerIndicator:1.1.6'
 }
