判断是否第一次登录弹出dialog，添加Banner网络图片,加入右上角popup菜单栏

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:theme="@style/FullScreen">
         <activity
             android:name=".activity.MainPageActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/PopupMenuTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
