--- a/app/build.gradle
+++ b/app/build.gradle
@@ -176,6 +176,10 @@ dependencies {
     /**
      * viewpageindicatord的使用
      */
+
+    /**
+     * 图片加载框架
+     */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -195,5 +199,5 @@ dependencies {
     compile files('libs/TalkingData_Analytics_Android_SDK_V2.2.37.jar')
     compile 'cn.finalteam:okhttpfinal:2.0.7'
     compile 'com.shizhefei:ViewPagerIndicator:1.1.6'
-
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
