--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="cn.cnlinfo.ccf">
 
     <!-- 网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--允许读取网络状态-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!--允许读取wifi网络状态-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <!--允许应用以只读的方式访问手机设备的信息，通过获取的信息来唯一标识用户-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"  />
-    <!--获取当前应用是否在显示应用，可以更精准的统计用户活跃-->
-    <uses-permission android:name="android.permission.GET_TASKS"  />
-    <!--获取振动通知-->
-    <uses-permission android:name="android.permission.VIBRATE"/>
-<application
+    <!-- 允许读取网络状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 允许读取wifi网络状态 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 允许应用以只读的方式访问手机设备的信息，通过获取的信息来唯一标识用户 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- 获取当前应用是否在显示应用，可以更精准的统计用户活跃 -->
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <!-- 获取振动通知 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <application
         android:name=".CCFApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ccf"
@@ -46,22 +51,34 @@
         <activity
             android:name=".activity.RegisterActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <!-- 登录注册展示界面 -->
         <activity
             android:name=".activity.LoginRegisterActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <!-- 忘记密码页面 -->
         <activity
             android:name=".activity.ForgetPasswordActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/spinner_theme"/>
-        <!--引导页-->
+            android:theme="@style/spinner_theme"
+            android:windowSoftInputMode="adjustPan" />
+        <!-- 引导页 -->
         <activity
             android:name=".activity.GuideActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.WebActivity">
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.BuildQRCodeActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
