--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,95 +116,98 @@ dependencies {
     })
 
     /**
-     *   事件分发
+     *    事件分发
      */
 
     /**
-     *   View注入框架
+     *    View注入框架
      */
 
     /**
-     *   dialog的框架
+     *    dialog的框架
      */
 
     /**
-     *   刷新的控件（上拉刷新，下拉加载 ）
+     *    刷新的控件（上拉刷新，下拉加载 ）
      */
 
     /**
-     *   OkHttp
+     *    OkHttp
      */
 
     /**
-     *   fastJson
+     *    fastJson
      */
 
     /**
-     *   Logger
+     *    Logger
      */
 
     /**
-     *      对话框
+     *       对话框
      */
 
     /**
-     *   进度对话框
+     *    进度对话框
      */
 
     /**
-     *   View注入框架
+     *    View注入框架
      */
 
     /**
-     *   dialog的框架
+     *    dialog的框架
      */
 
     /**
-     *   刷新的控件（上拉刷新，下拉加载 ）
+     *    刷新的控件（上拉刷新，下拉加载 ）
      */
 
     /**
-     *   OkHttp
+     *    OkHttp
      */
 
     /**
-     *   fastJson
+     *    fastJson
      */
 
     /**
-     *   Logger
+     *    Logger
      */
 
     /**
-     *      对话框
+     *       对话框
      */
 
     /**
-     *   进度对话框
+     *    进度对话框
      */
 
     /**
-     *   运行时权限
+     *    运行时权限
      */
 
     /**
-     *  okhttpfinal
+     *   okhttpfinal
      */
 
     /**
-     *  TalkingData数据统计
+     *   TalkingData数据统计
      */
 
     /**
-     *  viewpageindicatord的使用
+     *   viewpageindicatord的使用
      */
 
     /**
-     *  图片加载框架
+     *   图片加载框架 glide
      */
 
     /**
-     *  RecycleView
+     *   zxing 制作二维码
+     */
+    /**
+     * lite-orm数据库存储
      */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -227,4 +230,6 @@ dependencies {
     compile 'com.shizhefei:ViewPagerIndicator:1.1.6'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.github.yuzhiqiang1993:zxing:2.0.0'
+    compile files('libs/lite-orm-1.7.0.jar')
+    compile 'com.facebook.fresco:fresco:0.8.1'
 }
