--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,9 +127,14 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activity.RegisterMemberActivity"
+        <activity
+            android:name=".activity.RegisterMemberActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/spinner_theme"/>
+        <activity
+            android:name=".activity.RunningRankActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
