--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,15 +126,23 @@
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
             </intent-filter>
         </service>
-
+        <!-- 注册会员 -->
         <activity
             android:name=".activity.RegisterMemberActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/spinner_theme"/>
+            android:theme="@style/spinner_theme"
+            android:windowSoftInputMode="adjustPan" />
+        <!-- 跑步排名 -->
         <activity
             android:name=".activity.RunningRankActivity"
             android:screenOrientation="portrait" />
+        <!-- 我的参数 -->
+        <activity
+            android:name=".activity.MyParameterActivity"
+            android:screenOrientation="portrait" />
+        <!--平台参数-->
+        <activity android:name=".activity.PlatformParameterActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
