--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 允许读取wifi网络状态 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- 允许应用以只读的方式访问手机设备的信息，通过获取的信息来唯一标识用户 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 获取当前应用是否在显示应用，可以更精准的统计用户活跃 -->
