加入在线客服和代理协议部分

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 允许读取wifi网络状态 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- 允许应用以只读的方式访问手机设备的信息，通过获取的信息来唯一标识用户 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 获取当前应用是否在显示应用，可以更精准的统计用户活跃 -->
@@ -85,7 +85,9 @@
         <activity
             android:name=".activity.GuideActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.WebActivity">
+        <activity android:name=".activity.WebActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NormalFullScreen">
             <intent-filter tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -188,43 +190,66 @@
             android:name=".activity.ResetPasswordActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NormalFullScreen" />
-        <!--系统公告-->
-        <activity android:name=".activity.SystemNoticeActivity"
+        <!-- 系统公告 -->
+        <activity
+            android:name=".activity.SystemNoticeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NormalFullScreen" />
-        <!--在线钱包-->
-        <activity android:name=".activity.OnlineWalletActivity"
+        <!-- 在线钱包 -->
+        <activity
+            android:name=".activity.OnlineWalletActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NormalFullScreen" />
-        <!--对外互转-->
-        <activity android:name=".activity.ForeignTransferActivity"
+        <!-- 对外互转 -->
+        <activity
+            android:name=".activity.ForeignTransferActivity"
             android:screenOrientation="portrait"
             android:theme="@style/spinner_theme" />
-        <!--内部互转-->
-        <activity android:name=".activity.InternalTransferActivity"
+        <!-- 内部互转 -->
+        <activity
+            android:name=".activity.InternalTransferActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/spinner_theme"/>
-        <!--用户升级-->
-        <activity android:name=".activity.UserUpgradeActivity"
+            android:theme="@style/spinner_theme" />
+        <!-- 用户升级 -->
+        <activity
+            android:name=".activity.UserUpgradeActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/spinner_theme"/>
-        <!--记录中心-->
-        <activity android:name=".activity.RecordCenterActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/NormalFullScreen"/>
-        <!--碳控公益-->
-        <activity android:name=".activity.CCPublicBenefitActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/NormalFullScreen"/>
-        <!--碳控服务-->
-        <activity android:name=".activity.CCServiceActivity"
+            android:theme="@style/spinner_theme" />
+        <!-- 记录中心 -->
+        <activity
+            android:name=".activity.RecordCenterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NormalFullScreen" />
-        <!--兑换中心-->
-        <activity android:name=".activity.ConversionCenterActivity"
+        <!-- 碳控公益 -->
+        <activity
+            android:name=".activity.CCPublicBenefitActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/spinner_theme"
-            />
+            android:theme="@style/NormalFullScreen" />
+        <!-- 碳控服务 -->
+        <activity
+            android:name=".activity.CCServiceActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NormalFullScreen" />
+        <!-- 兑换中心 -->
+        <activity
+            android:name=".activity.ConversionCenterActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/spinner_theme" />
+        <activity android:name=".activity.UpgradeAgencyProtocolWebActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NormalFullScreen">
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="https" android:host="www.pgyer.com" android:path="/about/termofservice"/>
+            </intent-filter>
+        </activity>
+        <!--在线客服-->
+        <activity android:name=".activity.OnlineServiceActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NormalFullScreen"/>
+
     </application>
 
 </manifest>
