--- a/app/build.gradle
+++ b/app/build.gradle
@@ -218,6 +218,12 @@ dependencies {
     /**
      *   MVCHelper 核心类库
      */
+    /**
+     * Retrofit+Rxjava+Gson
+     */
+    /**
+     * HelloCharts
+     */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -244,4 +250,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'liji.library.dev:citypickerview:2.0.1'
     compile 'com.shizhefei:MVCHelper-Library:1.3.2'
+
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    compile 'com.google.code.gson:gson:2.6.2'
+
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+
+
 }
